--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Binaries
-app/services/sales-api/sales-api
+app/services/api/api
 app/services/metrics/metrics
-app/tooling/sales-admin/sales-admin
-app/tooling/sales-admin/logfmt
+app/tooling/admin/admin
+app/tooling/admin/logfmt
 
 # Environment
 app/frontends/admin/.env
