--- a/zarf/k8s/dev/tempo/dev-tempo.yaml
+++ b/zarf/k8s/dev/tempo/dev-tempo.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: sales-system
+  name: api-system
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: tempo-conf
-  namespace: sales-system
+  namespace: api-system
 data:
   tempo.yaml: |
     usage_report:
@@ -78,7 +78,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: tempo
-  namespace: sales-system
+  namespace: api-system
 spec:
   replicas: 1
   strategy:
@@ -89,7 +89,7 @@ spec:
       app: tempo
   template:
     metadata:
-      namespace: sales-system
+      namespace: api-system
       labels:
         app: tempo
     spec:
@@ -126,7 +126,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tempo
-  namespace: sales-system
+  namespace: api-system
 spec:
   type: ClusterIP
   selector:
