--- a/zarf/k8s/dev/database/dev-database.yaml
+++ b/zarf/k8s/dev/database/dev-database.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: sales-system
+  name: api-system
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: database-data
-  namespace: sales-system
+  namespace: api-system
 spec:
   accessModes:
     - ReadWriteOnce
@@ -19,7 +19,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: database
-  namespace: sales-system
+  namespace: api-system
 spec:
   selector:
     matchLabels:
@@ -91,7 +91,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: database-service
-  namespace: sales-system
+  namespace: api-system
 spec:
   type: ClusterIP
   selector:
@@ -105,7 +105,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: pghbaconf
-  namespace: sales-system
+  namespace: api-system
 data:
   # file-like keys
   pg_hba.conf: |
