--- a/zarf/k8s/dev/loki/dev-loki.yaml
+++ b/zarf/k8s/dev/loki/dev-loki.yaml
@@ -8,13 +8,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: sales-system
+  name: api-system
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: loki-conf
-  namespace: sales-system
+  namespace: api-system
 data:
   loki.yaml: |
     analytics:
@@ -76,7 +76,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: loki
-  namespace: sales-system
+  namespace: api-system
 spec:
   replicas: 1
   strategy:
@@ -118,7 +118,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: loki
-  namespace: sales-system
+  namespace: api-system
 spec:
   ports:
     - name: "loki"
