--- a/zarf/k8s/dev/prometheus/dev-prometheus.yaml
+++ b/zarf/k8s/dev/prometheus/dev-prometheus.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: sales-system
+  name: api-system
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-conf
-  namespace: sales-system
+  namespace: api-system
 data:
   prometheus.yaml: |
     global:
@@ -16,18 +16,18 @@ data:
       scrape_timeout: 10s # is set to the global default (10s).
     alerting:
     scrape_configs:
-      - job_name: "sales-api"
+      - job_name: "api"
         metrics_path: '/metrics'
         scrape_interval: 5s
         scrape_timeout: 2s
         static_configs:
-          - targets: [ "sales-api.sales-system.svc:3002" ]
+          - targets: [ "api.api-system.svc:3002" ]
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: prometheus-deployment
-  namespace: sales-system
+  namespace: api-system
   labels:
     app: prometheus
 spec:
@@ -71,7 +71,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus
-  namespace: sales-system
+  namespace: api-system
 spec:
   type: ClusterIP
   selector:
