--- a/zarf/k8s/dev/vault/configmap.yaml
+++ b/zarf/k8s/dev/vault/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: vault-config
-  namespace: sales-system
+  namespace: api-system
 data:
   extraconfig-from-values.hcl: |-
     disable_mlock = true
