--- a/zarf/k8s/dev/vault/dev-vault.yaml
+++ b/zarf/k8s/dev/vault/dev-vault.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: sales-system
+  name: api-system
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: vault
-  namespace: sales-system
+  namespace: api-system
   labels:
     app.kubernetes.io/name: vault
     app.kubernetes.io/instance: vault
@@ -118,7 +118,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vault-service
-  namespace: sales-system
+  namespace: api-system
   labels:
     app.kubernetes.io/name: vault
     app.kubernetes.io/instance: vault
@@ -143,7 +143,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vault-internal
-  namespace: sales-system
+  namespace: api-system
   labels:
     app.kubernetes.io/name: vault
     app.kubernetes.io/instance: vault
