updated k8s env, configs, and migrate scripts

--- a/zarf/k8s/dev/api/kustomization.yaml
+++ b/zarf/k8s/dev/api/kustomization.yaml
@@ -9,5 +9,5 @@ patches:
 - path: ./dev-api-vault-patch.yaml
 images:
 - name: api-image
-  newName: nhaancs/service/api
+  newName: nhaancs/bhms/api
   newTag: 0.0.1
