updated loadtest, seed, added tracing

--- a/zarf/k8s/dev/api/dev-api-patch-deploy.yaml
+++ b/zarf/k8s/dev/api/dev-api-patch-deploy.yaml
@@ -92,9 +92,9 @@ spec:
       - name: api
         resources:
           requests:
-            cpu: "500m" # I need access to 1/2 core on the node.
+            cpu: "1000m"
           limits:
-            cpu: "500m" # Execute instructions 50ms/100ms on my 1 core.
+            cpu: "1000m"
 
         volumeMounts:
           - name: vault
