--- a/zarf/k8s/dev/api/dev-api-patch-deploy.yaml
+++ b/zarf/k8s/dev/api/dev-api-patch-deploy.yaml
@@ -99,3 +99,10 @@ spec:
         volumeMounts:
           - name: vault
             mountPath: /vault
+
+      - name: metrics
+        resources:
+          requests:
+            cpu: "100m"
+          limits:
+            cpu: "100m"
