--- a/zarf/k8s/dev/api/dev-api-patch-service.yaml
+++ b/zarf/k8s/dev/api/dev-api-patch-service.yaml
@@ -20,3 +20,6 @@ spec:
   - name: prometheus
     port: 3002
     targetPort: prometheus
+  - name: metrics
+    port: 3001
+    targetPort: metrics
