replaced vault with file key store

--- a/zarf/k8s/dev/api/dev-api-patch-deploy.yaml
+++ b/zarf/k8s/dev/api/dev-api-patch-deploy.yaml
@@ -88,9 +88,9 @@ spec:
           limits:
             cpu: "500m"
 
-        volumeMounts:
-          - name: vault
-            mountPath: /vault
+#        volumeMounts:
+#          - name: vault
+#            mountPath: /vault
 
       - name: metrics
         resources:
