--- a/zarf/k8s/dev/kind-config.yaml
+++ b/zarf/k8s/dev/kind-config.yaml
@@ -19,8 +19,8 @@ nodes:
   - containerPort: 3100
     hostPort: 3100
   # Vault
-  - containerPort: 8200
-    hostPort: 8200
+#  - containerPort: 8200
+#    hostPort: 8200
   # Postgres
   - containerPort: 5432
     hostPort: 5432
