--- a/zarf/k8s/dev/kind-config.yaml
+++ b/zarf/k8s/dev/kind-config.yaml
@@ -22,8 +22,8 @@ nodes:
 #  - containerPort: 8200
 #    hostPort: 8200
   # Postgres
-  - containerPort: 5432
-    hostPort: 5432
+#  - containerPort: 5432
+#    hostPort: 5432
   # Prometheus
   - containerPort: 9090
     hostPort: 9090
