--- a/app/frontends/todo/pubspec.yaml
+++ b/app/frontends/todo/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.4.7
   riverpod_annotation: ^2.3.1
+  flutter_slidable: ^3.0.1
 
 
 dev_dependencies:
